	PR c++/81204 - parse error with dependent template-name

* parser.c (cp_parser_lookup_name): Disqualify function templates
	after lookup.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@249750 138bc75d-0d04-0410-961f-82ee72b054a4